soanr issue fix